@@ -116,6 +116,9 @@ Qt for Windows CE
 
 - moc
 
+* [QTBUG-20785] The moc now has a -b<file> option to #include an additional
+  file at the beginning of the generated file.
+
 
 - uic
 
